syntax = "proto3";

package blog;

option go_package = "github.com/victorvbello/gonotes/course/grpc/blog/proto";

import "google/protobuf/empty.proto";


message Blog {
    string id = 1;
    string author = 2;
    string title = 3;
    string content  = 4;
}

message BlogId {
    string id = 1;
}

message UploadBlogImgRequest {
    oneof Data {
        FileMetadata metadata = 1;
        bytes fileData = 2;
    }
}

message FileMetadata {
    string fileName = 1;
    string mimeType = 2;
    string blogID = 3;
}

service BlogService {
    rpc CreateBlog (Blog) returns (BlogId);
    rpc ReadBlog (BlogId) returns (Blog);
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
    rpc UploadBlogImg(stream UploadBlogImgRequest) returns (google.protobuf.Empty);
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
    rpc ListBlog (google.protobuf.Empty) returns (stream Blog);
}